welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:11: error: type mismatch;
 found   : Any
 required: Int
    T(compt)=getCouleurSol()
      ^Array1:17: error: type mismatch;
 found   : Any
 required: java.awt.Color
      Brosse(T(k)) ; avance()
              ^